--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://sendbird.github.io/sendbird-live-sample-video-react",
   "private": true,
   "dependencies": {
-    "@sendbird/live": "^1.1.1",
+    "@sendbird/live": "^1.2.0-beta.1",
     "@sendbird/uikit-react": "^3.6.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
